# PlainVideo

./: .gitignore  AGENTS.md  Cargo.toml  PRIVACY.md  README.ko.md  README.md  SOURCE_OFFER.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  build.rs
.cargo/: config.toml
assets/mpv/: input.conf  mpv.conf
assets/mpv/scripts/: plainvideo.lua
assets/store-listing/: README.md
docs/: ACCESSIBILITY_BASELINE.md  ARCHITECTURE.md  CLEAN_MACHINE_PROOF.md  FORMAT_COMPATIBILITY_LEDGER.md  FRUC_SPIKE.md  LGPL_RUNTIME_CANDIDATE.md  PLAYBACK_STABILITY_PLAN.md  PRODUCT.md  QUALITY_PASS_1_TO_6.md  RELEASE_NOTES_0.2.0.md  RELEASE_NOTES_0.2.1.md  RIFE_PERFORMANCE_ROADMAP.md  RIFE_PLAYER_INTEGRATION.md  RIFE_SLICE_3A_BENCHMARK.md  RIFE_SLICE_3A_BUFFER_OPTIMIZATION.md  RUNTIME_DISTRIBUTION_REVIEW.md  SLICE_0B_LIBMPV_PROOF.md  SLICE_0_PLAYBACK_PROOF.md  STORE_LISTING_DRAFT.md  STORE_RELEASE_PLAN.md  STORE_RELEASE_STATE.json  STORE_SUBMISSION_0.2.0.md  STORE_SUBMISSION_0.2.1.md  UI_UX_POLISH_PROOF.md  WINDOW_BEHAVIOR_PROOF.md
native/mpv-rife-filter/: mpv-v0.41.0-rife-filter.patch  vf_plainvideo_rife.c
native/rife-benchmark/: CMakeLists.txt
native/rife-benchmark/include/: plainvideo_rife.h
native/rife-benchmark/src/: benchmark.cpp  checked_rife_v4.cpp  checked_rife_v4.h  plainvideo_rife.cpp  rife_concat7.cpp  rife_concat7.h  rife_postproc_bgra8.h  rife_preproc_bgra8.h
packaging/: PORTABLE_README.txt
packaging/icons/: README.md
packaging/msix/: DEVELOPER_PACKAGE_README.txt  Package.appxmanifest  README.md
scripts/: audit-windows-runtime-compatibility.ps1  bootstrap-lgpl-mpv-dependencies.ps1  bootstrap-lgpl-mpv-toolchain.ps1  bootstrap-mpv.ps1  bootstrap-rife-spike.ps1  build-lgpl-libmpv.ps1  build-lgpl-libmpv.sh  build-msix.ps1  build-portable.ps1  build-release-portable.ps1  build-rife-spike.ps1  build-store-listing-assets.py  capture-lgpl-runtime-closure.ps1  capture-store-screenshots.ps1  check-fruc-prerequisites.ps1  format-fixtures.json  generate-format-fixtures.ps1  generate-smoke-media.ps1  materialize-lgpl-corresponding-source.ps1  prepare-clean-machine-proof.ps1  run-clean-machine-proof.ps1  run-local-validation.ps1  run-wack-elevated.ps1  run-wack.ps1  stage-rife-player.ps1  verify-accessibility.ps1  verify-format-matrix.ps1  verify-fruc-spike.ps1  verify-input-interactions.ps1  verify-mpv-runtime.ps1  verify-playback-recovery.ps1  verify-playback-soak.ps1  verify-rife-player.ps1  verify-rife-spike.ps1  verify-window-behavior.ps1
src/: locale.rs  main.rs  media_queue.rs  mpv.rs  preferences.rs  resume.rs  seek_preview.rs  windowing.rs  windows_app.rs
