[package]
name = "plainvideo"
version = "0.1.0"
description = "A borderless open-source media player for Windows"
license = "MIT"
edition = "2024"
rust-version = "1.85"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"

[target.'cfg(windows)'.dependencies]
libloading = "0.7.4"
windows-sys = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
